--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="./1-gallery.html">Gallery</a></li>
-        <li><a href="./2-form.html">Form</a></li>
-      </ul>
-    </nav>
+    <section>
+      <a href="./index.html">Go to home</a>
+      <h1>Welcome to page 1</h1>
+      <ul class="gallery"></ul>
+    </section>
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
